<resources>
    <string name="app_name">Ozeck POS</string>
    <string name="action_settings">Paramètres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="powered_by_jkantech">Powered by jkanTech</string>
    <string name="client_name">Ets Ozeck Business/Likasi</string>
    <string name="made_with_in_drc">Made with ❤ in DRC</string>
    <string name="copyright">Copyright © 2021 -jkanTech</string>
    <string name="build_date">Build date :</string>
    <string name="action_about">A propos</string>
</resources>