<?xml version="1.0" encoding="utf-8"?>
    <!--
    * Created by Jonas Kaninda on 10/07/2020.
    */
    -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.Activities.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout">




            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/aboutbackground"
                android:elevation="4dp"
                android:paddingBottom="24dp">
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:layout_alignParentStart="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="70dp">
                    <TextView
                        android:id="@+id/dev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TableRow
                        android:id="@+id/line3"
                        android:layout_width="140dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#fff"/>
                    <TextView
                        android:id="@+id/client_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/client_name"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/app_DRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/made_with_in_drc"
                        />

                    <TextView
                        android:id="@+id/copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/copyright"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                    <!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/code_source"
                        android:textColor="@color/white"
                        android:textSize="16sp" />



                    <ImageView
                        android:id="@+id/source_code_btn"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:textAllCaps="false"
                        android:src="@drawable/github"
                        android:textStyle="bold" />
                        -->




                </LinearLayout>


            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardabout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profile_layout"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/app_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/logo"
                        />
                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_below="@id/app_name"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/build_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/app_version"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:text="@string/build_date"
                        android:layout_centerHorizontal="true"/>

                    <TableRow
                        android:id="@+id/line"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="25dp"
                        android:layout_below="@id/app_icon"
                        android:background="#000000"/>

                    <Button
                        android:id="@+id/feedback"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/line"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:text="Feedback"
                        android:visibility="visible"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/feedback_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/feedback"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="20dp"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:layout_below="@+id/feedback_txt"
                        android:paddingStart="20dp"
                        android:layout_alignParentBottom="true"
                        android:textSize="18sp"
                        android:text="Developpée par jkanTech "
                        tools:ignore="RtlSymmetry" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


